--- a/package.json
+++ b/package.json
@@ -5,5 +5,11 @@
   "dependencies": {
     "discord.js": "^14.11.0",
     "express": "^4.18.2"
+    {
+  "scripts": {
+    "start": "node bot.js"
+  }
+}
+
   }
 }
